{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 272,
  "lineage": "c9d68460-9506-325d-5766-6b61bda12d7b",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b262ed7749b60fb9",
            "arn": "arn:aws:ec2:us-east-1:383349724158:elastic-ip/eipalloc-0b262ed7749b60fb9",
            "association_id": "eipassoc-0f64942cf27545b93",
            "domain": "vpc",
            "id": "eipalloc-0b262ed7749b60fb9",
            "instance": "i-065f874974813762d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06c08c37f9cd8a5d7",
            "private_dns": "ip-10-10-1-66.ec2.internal",
            "private_ip": "10.10.1.66",
            "public_dns": "ec2-54-91-213-43.compute-1.amazonaws.com",
            "public_ip": "54.91.213.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tasktracker-dev-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tasktracker-dev-eip",
              "Project": "tasktracker",
              "Repository": "tasktracker-devops-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:383349724158:instance/i-065f874974813762d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tasktracker-dev-ec2-profile",
            "id": "i-065f874974813762d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06c08c37f9cd8a5d7",
            "private_dns": "ip-10-10-1-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.66",
            "public_dns": "ec2-54-91-213-43.compute-1.amazonaws.com",
            "public_ip": "54.91.213.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "tasktracker",
                  "Repository": "tasktracker-devops-platform"
                },
                "throughput": 125,
                "volume_id": "vol-0c0b4b3d2ef7d8447",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01727c4f1d9c795a7",
            "tags": {
              "Name": "tasktracker-dev-ec2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tasktracker-dev-ec2",
              "Project": "tasktracker",
              "Repository": "tasktracker-devops-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-09cee78d3aad758a3"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.ami",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383349724158:internet-gateway/igw-0d6255356f1a9b725",
            "id": "igw-0d6255356f1a9b725",
            "owner_id": "383349724158",
            "tags": {
              "Name": "tasktracker-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tasktracker-dev-igw",
              "Project": "tasktracker",
              "Repository": "tasktracker-devops-platform"
            },
            "vpc_id": "vpc-0aeb3f7dc632d53ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d6255356f1a9b725",
            "id": "r-rtb-02c6f4d0f5c8169261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02c6f4d0f5c816926",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383349724158:route-table/rtb-02c6f4d0f5c816926",
            "id": "rtb-02c6f4d0f5c816926",
            "owner_id": "383349724158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d6255356f1a9b725",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tasktracker-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tasktracker-dev-public-rt",
              "Project": "tasktracker",
              "Repository": "tasktracker-devops-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aeb3f7dc632d53ed"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eec174fe22b440b",
            "route_table_id": "rtb-02c6f4d0f5c816926",
            "subnet_id": "subnet-01727c4f1d9c795a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383349724158:subnet/subnet-01727c4f1d9c795a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01727c4f1d9c795a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383349724158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tasktracker-dev-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tasktracker-dev-public-subnet",
              "Project": "tasktracker",
              "Repository": "tasktracker-devops-platform"
            },
            "vpc_id": "vpc-0aeb3f7dc632d53ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383349724158:vpc/vpc-0aeb3f7dc632d53ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-09d8b1842bb752a38",
            "default_route_table_id": "rtb-03a27948ba3d0c575",
            "default_security_group_id": "sg-0526d9f156972b93f",
            "dhcp_options_id": "dopt-021c53edc9451b24f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aeb3f7dc632d53ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a27948ba3d0c575",
            "owner_id": "383349724158",
            "tags": {
              "Name": "tasktracker-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tasktracker-dev-vpc",
              "Project": "tasktracker",
              "Repository": "tasktracker-devops-platform"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383349724158:security-group/sg-09cee78d3aad758a3",
            "description": "Security group for TaskTracker EC2 host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cee78d3aad758a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tasktracker-dev-ec2-sg",
            "name_prefix": "",
            "owner_id": "383349724158",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tasktracker-dev-ec2-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tasktracker-dev-ec2-sg",
              "Project": "tasktracker",
              "Repository": "tasktracker-devops-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aeb3f7dc632d53ed"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}